--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -26,6 +26,8 @@
   --main-black-text: #333333;
   --main-desc-card-black-text: #b39f9f;
   --main-desc-card-text: #898989;
+  --btn-color-white: #FFFFFF;
+  --brn-color-black: #000000;
 
 
   /**  Шрифты */
