--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,8 +11,7 @@
 @use 'layout/index/nc-section-main';
 
 // ==== 4. Components ====
-@use 'components/_button_nc-section.scss';
-@use 'components/card';
+@use 'components/el-rooms';
 
 
 body {
