--- a/src/components/index/main/_section-main.html
+++ b/src/components/index/main/_section-main.html
@@ -37,4 +37,19 @@
             </div>
         </div>
     </section>
+    <section class="content__op-section">
+        <div class="block-content-op">
+            <div class="block-content-op__header">
+                Our Products
+            </div>
+            <div class="block-content-op__furneture">
+                @@include('../components/_block-furneture.html')
+            </div>
+            <div class="block-content-op__btn-edit">
+                <button class="bc-btn">
+                    Show more
+                </button>
+            </div>
+        </div>
+    </section>
 </main>
