--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -26,8 +26,10 @@
   --main-black-text: #333333;
   --main-desc-card-black-text: #b39f9f;
   --main-desc-card-text: #898989;
+  --sell-cost-text: #B0B0B0;
   --btn-color-white: #FFFFFF;
   --brn-color-black: #000000;
+  --btn-yellow-text: #B88E2F;
 
 
   /**  Шрифты */
