--- a/src/components/_el-furneture.html
+++ b/src/components/_el-furneture.html
@@ -8,4 +8,12 @@
             <p class="edit__cost">@@cost <span class="furneture-span">@@furn-span</span></p>
         </div>
     </div>
+    <div class="glass-effect-text">
+        <div class="graf-for-btn">
+            <button class="graf-btn">Add to cart</button>
+        </div>
+        <div class="graf-body">
+            Share <span class="graf-span">Compare</span> <span class="graf-span">Like</span>
+        </div>
+    </div>
 </div>
