--- a/src/scss/layout/index/_op-section-main.scss
+++ b/src/scss/layout/index/_op-section-main.scss
@@ -1,6 +1,13 @@
 @use '../../utils/variables';
 
 .el-furnerute-block{
+
+
+// Анимации
+    position: relative;
+    overflow: hidden;
+    transition: all 0.5s ease;
+// 
     position: relative;
     display: inline-block;
     background-color: #F4F5F7;
@@ -52,6 +59,65 @@
 
 }
 
+.el-furnerute-block:hover::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(100, 100, 100, 0.4);
+    backdrop-filter: blur(5px);
+    z-index: 1;
+}
+
+.graf-btn{
+    width: 80%;
+    background-color: white;
+    border: 2px solid var(--btn-yellow-text);
+    height: 4vh;
+    color: var(--btn-yellow-text);
+    font-weight: 600;
+    font-size: 1rem;
+}
+
+
+.glass-effect-text {
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    z-index: 2;
+    transition: all 0.5s ease;
+    .graf-body{
+        padding-top: 15%;
+    }
+}
+.graf-span{
+    padding-left: 17px;
+}
+
+.el-furnerute-block:hover .glass-effect-text {
+    opacity: 1;
+}
+
+.el-furnerute-block:hover > *:not(.glass-effect-text) {
+    filter: brightness(0.6);
+}
+
+.el-furnerute-block:hover .edit {
+    position: relative;
+    z-index: 3;
+    filter: brightness(1);
+}
+
 .content{
 
     &__op-section{
@@ -93,7 +159,6 @@
         }
     }
 }
-
 
 .block-furneture-edit{
     display: flex;
