--- a/src/components/index/main/_section-main.html
+++ b/src/components/index/main/_section-main.html
@@ -52,7 +52,57 @@
             </div>
         </div>
     </section>
-    <section>
-        
+    <section class="content__bri-section">
+        <div class="block-content-bri">
+            <div class="block-content-bri__body">
+                <div class="block-content-bri-edit">
+                    <div class="block-content-bri-edit__body header">
+                        50+ Beautiful rooms inspiration
+                    </div>
+                    <div class="block-content-bri-edit__body descriptor">
+                        Our designer already made a lot of beautiful prototipe of rooms that inspire you
+                    </div>
+                    <div class="block-content-bri-edit_body btn">
+                        <button type="submit" class="nc-btn">Explore More</button>
+                    </div>
+                </div>
+            </div>
+            <div class="block-content-bri__choise">
+                <div class="choice-inner-peace">
+                    <div class="choice-inner-peace__peace-img">
+                        <img src="/assets/images/bri-1.webp" alt="" class="p-img">
+                        <div class="peace-text-block">
+                            <div class="peace-text-block-edit">
+                                <div class="peace-text-block-edit__first">
+                                    01 - Bed Room
+                                </div>
+                                <div class="peace-text-block-edit__second">
+                                    Inner Peace
+                                </div>
+                            </div>
+                        </div>
+                        <div class="peace-img__btn-next-point">
+                            <img src="/assets/images/peace-next-point.webp" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="choise-2">
+                    <div>
+                        <img src="/assets/images/bri-2.webp" alt="">
+                    </div>  
+                    <div class="">
+                        <img src="/assets/images/peace-pages.webp" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="content__ss-section">
+        <div class="content__ss-section__title">
+            Share your setup with
+        </div>
+        <div class="content__ss-section__descriptor">
+            #FuniroFurniture
+        </div>
     </section>
 </main>
