--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,9 @@
 @use 'layout/index/nc-section-main';
 @use 'layout/index/op-section-main';
 @use 'layout/index/br-section-main';
+@use 'layout/index/bri-section-main';
+@use 'layout/index/ss-section-main';
+@use 'layout/index/footer';
 
 // ==== 4. Components ====
 
