--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -26,11 +26,15 @@
   --main-black-text: #333333;
   --main-desc-card-black-text: #b39f9f;
   --main-desc-card-text: #898989;
+  --main-var1-colro-text: #616161;
+  --footer-text-header: #9F9F9F;
   --sell-cost-text: #B0B0B0;
   --btn-color-white: #FFFFFF;
   --brn-color-black: #000000;
   --btn-yellow-text: #B88E2F;
 
+  /**  Бэк */
+  --main-background-color: #FCF8F3;
 
   /**  Шрифты */
   --font-family-title: "Poppins", sans-serif;
