остались только номинации

--- a/src/components/index/_header-nav.html
+++ b/src/components/index/_header-nav.html
@@ -2,7 +2,7 @@
     <img src="../assets/logo.png" alt="">
     <ul class="navigation__menu">
         <li>Home</li>
-        <li class="nav__menu-el">Shop</li>
+        <li class="nav__menu-el"><a href="../shop.html">Shop</a></li>
         <li class="nav__menu-el">About</li>
         <li class="nav__menu-el">Contact</li>
     </ul>
