--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,9 @@
 @use 'layout/index/ss-section-main';
 @use 'layout/index/footer';
 
+@use 'layout/shop/orientation-shop';
+@use 'layout/index/shop-buttons';
+
 // ==== 4. Components ====
 
 
