--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -35,6 +35,8 @@
 
   /**  Бэк */
   --main-background-color: #FCF8F3;
+  --main-background-color-shop: #F9F1E7;
+  --background-color-shop: #B88E2F;
 
   /**  Шрифты */
   --font-family-title: "Poppins", sans-serif;
