--- a/src/components/shop/_shop-filter.html
+++ b/src/components/shop/_shop-filter.html
@@ -57,8 +57,8 @@
 
 <section class="shop-buttons-section">
     @@include('../components/_shop-buttons.html')
-<section>
+</section>
 
 <section class="nomination-section">
-
+    @@include('../components/_nomination.html')
 </section>
