--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -36,6 +36,7 @@
   /**  Бэк */
   --main-background-color: #FCF8F3;
   --main-background-color-shop: #F9F1E7;
+  --main-background-color-nomination: #FAF3EA;
   --background-color-shop: #B88E2F;
 
   /**  Шрифты */
