second page completed

--- a/src/components/_nomination.html
+++ b/src/components/_nomination.html
@@ -1,3 +1,60 @@
 <div class="nomination-block">
-    vb
+    <div class="nomination-block__high-quality">
+        <div>
+            <img src="/assets/images/trophy.webp" alt="">
+        </div>
+        <div class="high-quality__text">
+            <div class="hq-header">
+                High Quality
+            </div>
+            <div class="hq-descriptor">
+                crafted from top materials
+            </div>
+        </div>
+    </div>
+
+
+    <div class="nomination-block__warranty-protection">
+        <div>
+            <img src="/assets/images/guarantee.webp" alt="">
+        </div>
+        <div class="warranty-protection__text">
+            <div class="wp-header">
+                Warranty Protection
+            </div>
+            <div class="wp-descriptor">
+                Over 2 years
+            </div>
+        </div>
+    </div>
+
+
+    <div class="nomination-block__free-shipping">
+        <div>
+            <img src="/assets/images/Shipping.webp" alt="">
+        </div>
+        <div class="free-shipping__text">
+            <div class="fs-header">
+                Free Shipping
+            </div>
+            <div class="fs-descriptor">
+                Order over 150 $
+            </div>
+        </div>
+    </div>
+
+
+    <div class="nomination-block__support">
+        <div>
+            <img src="/assets/images/customer-support.webp" alt="">
+        </div>
+        <div class="support__text">
+            <div class="s-header">
+                24 / 7 Support
+            </div>
+            <div class="s-descriptor">
+                Dedicated support
+            </div>
+        </div>
+    </div>
 </div>
