--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 
 @use 'layout/shop/orientation-shop';
 @use 'layout/index/shop-buttons';
+@use 'layout/index/nomination';
 
 // ==== 4. Components ====
 
