--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -21,6 +21,7 @@
 
   /**  Основные цвета */
   --main-text: #3a3a3a;
+  --main-nominations-text: #242424;
   --main-nav-text: rgb(0, 0, 0);
   --main-black-nav-text: #FFFFFF;
   --main-black-text: #333333;
