--- a/src/scss/layout/index/_nomination.scss
+++ b/src/scss/layout/index/_nomination.scss
@@ -1,5 +1,41 @@
+@use 'utils/variables';
+
 .nomination-block{
-    width: 50%;
+    width: 100%;
     height: 270px;
     background-color: var(--main-background-color-nomination);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 55px;
+    margin-bottom: -4%;
+
+
+// надо media
+
+
+    &__high-quality, &__warranty-protection, &__free-shipping, &__support{
+        display: inline-flex;
+        align-items: center;
+        gap: 5px;
+    }
+
+    .hq-header, .wp-header, .fs-header, .s-header{
+        font-weight: 600;
+        font-size: 25px;
+        line-height: 150%;
+        letter-spacing: 0%;
+        color: var(--main-nominations-text);
+    }
+
+    .hq-descriptor, .wp-descriptor, .fs-descriptor, .s-descriptor{
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 150%;
+        letter-spacing: 0%;
+        color: var(--main-desc-card-text);
+
+    }
+
 }
