ФСЁ КАРОЧЕ НА СИВОДНЯ

--- a/src/scss/layout/index/_nomination.scss
+++ b/src/scss/layout/index/_nomination.scss
@@ -23,7 +23,7 @@
 
     .hq-header, .wp-header, .fs-header, .s-header{
         font-weight: 600;
-        font-size: 25px;
+        font-size: 1.56rem;
         line-height: 150%;
         letter-spacing: 0%;
         color: var(--main-nominations-text);
@@ -31,7 +31,7 @@
 
     .hq-descriptor, .wp-descriptor, .fs-descriptor, .s-descriptor{
         font-weight: 500;
-        font-size: 20px;
+        font-size: 1.25rem;
         line-height: 150%;
         letter-spacing: 0%;
         color: var(--main-desc-card-text);
