--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,16 @@
 @use 'layout/index/shop-buttons';
 @use 'layout/index/nomination';
 
+
+@use 'layout/asgaard/path-asgaard';
+@use 'layout/asgaard/main-asgaard-inspection';
+@use 'layout/asgaard/buttons-size';
+@use 'layout/asgaard/color-choise';
+@use 'layout/asgaard/count-things';
+
+
+
+
 // ==== 4. Components ====
 
 
