--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,8 @@
 @use 'layout/asgaard/count-things';
 
 
+@use 'layout/product-comparison/add-product__selected-block';
+@use 'layout/product-comparison/main-product-comparison';
 
 
 // ==== 4. Components ====
