--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -30,6 +30,7 @@
   --main-var1-colro-text: #616161;
   --footer-text-header: #9F9F9F;
   --sell-cost-text: #B0B0B0;
+  --main-link-grey-color: #727272;
   --btn-color-white: #FFFFFF;
   --brn-color-black: #000000;
   --btn-yellow-text: #B88E2F;
