--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,9 @@
 @use 'layout/asgaard/buttons-size';
 @use 'layout/asgaard/color-choise';
 @use 'layout/asgaard/count-things';
+@use 'layout/asgaard/main-text-block__pictures';
+@use 'layout/asgaard/main-text-block';
+@use 'layout/asgaard/related-products';
 
 
 
