--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -28,10 +28,12 @@
 @use 'layout/asgaard/main-text-block__pictures';
 @use 'layout/asgaard/main-text-block';
 @use 'layout/asgaard/related-products';
-@use 'layout/asgaard/overlay';
+
+@use 'layout/asgaard/cart-block';
 
 @use 'layout/product-comparison/add-product__selected-block';
 @use 'layout/product-comparison/main-product-comparison';
+@use 'layout/product-comparison/table';
 
 
 // ==== 4. Components ====
@@ -50,4 +52,21 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+
+.overlay {
+    position: relative;
+}
+
+.overlay::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 10;
+    pointer-events: none;
 }
