--- a/src/scss/layout/product-comparison/_table.scss
+++ b/src/scss/layout/product-comparison/_table.scss
@@ -13,34 +13,32 @@
     }
 }
 
-table {
-    
+.comparison-table{
     width: 75%;
     border: 0px solid #E8E8E8;
     border-collapse: collapse;
 }
 
 .th-edit{
-    font-weight: 700;
-    font-size: 1.75rem;
-    line-height: 126%;
-    letter-spacing: 0%;
-    vertical-align: middle;
-    color: var(brn-color-black);
-}
-
-th, td{
-    padding: 4%;
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 126%;
     letter-spacing: 0%;
     vertical-align: middle;
-    color: var(--brn-color-black);
+    color: var(brn-color-black);
     text-align: left;
 
+    padding: 4%;
     border-right: 2px solid #E8E8E8;
     width: 344px;
+}
+
+.th-edit-title{
+    font-weight: 700;
+    font-size: 1.75rem;
+    text-align: left;
+    padding: 4%;
+    border-right: 2px solid #E8E8E8;
 }
 
 .table-btn{
