--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,8 @@
 @use 'layout/checkout/select-for-checkout';
 @use 'layout/checkout/order-info-sections';
 
+@use 'layout/contact/main-contact';
+
 
 // ==== 4. Components ====
 
