--- a/src/scss/layout/contact/_main-contact.scss
+++ b/src/scss/layout/contact/_main-contact.scss
@@ -49,6 +49,7 @@
                 flex-direction: column;
                 gap: 42px;
                 width: 30%;
+                min-width: 286px;
 
                 &__address{
                     display: inline-flex;
