--- a/src/scss/layout/index/_footer.scss
+++ b/src/scss/layout/index/_footer.scss
@@ -61,6 +61,7 @@
             &__form{
 
                 display: flex;
+                flex-wrap: wrap;
                 gap: var(--gap-l);
                 font-size: 0.875rem;
 
