--- a/src/scss/layout/index/_nomination.scss
+++ b/src/scss/layout/index/_nomination.scss
@@ -12,6 +12,10 @@
     gap: 55px;
     margin-bottom: -4%;
 
+    @media screen and (max-width: 600px) {
+        height: auto;
+    }
+
 
 // надо media
 
