--- a/src/scss/layout/asgaard/_cart-block.scss
+++ b/src/scss/layout/asgaard/_cart-block.scss
@@ -1,9 +1,3 @@
 @use '../../utils/variables';
 
-.cart-block{
-    width: 417px;
-    height: 746px;
-    background-color: white;
-    z-index: 11;   
-    position: absolute;
-}
+// нынче тут ничего....
