--- a/src/scss/layout/checkout/_main-checkout.scss
+++ b/src/scss/layout/checkout/_main-checkout.scss
@@ -44,6 +44,7 @@
         &__for-product{
             margin-top: 3%;
             width: 27%;
+            min-width: 235px;
             
             &__final-cost{
                 display: flex;
@@ -144,6 +145,10 @@
                     padding-top: 5%;
                 }
 
+                @media screen and (max-width: 650px) {
+                    
+                    width: 300px;
+                }
 
             }
         }
