--- a/src/scss/layout/product-comparison/_table.scss
+++ b/src/scss/layout/product-comparison/_table.scss
@@ -1,25 +1,42 @@
 @use '../../utils/variables';
 
-.main-comparison{
+.main-comparison {
     margin-top: 5%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    &__line{
 
+    @media screen and (max-width: 1150px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    &__line {
         width: 90vw;
         height: 1px;
         background-color: #E8E8E8;
     }
 }
 
-.comparison-table{
+.comparison-table {
     width: 75%;
     border: 0px solid #E8E8E8;
     border-collapse: collapse;
+
+    @media screen and (max-width: 800px) {
+        width: 90%;
+    }
+
+    
+    @media screen and (max-width: 480px) {
+        width: 100%;
+        display: block; 
+        overflow-x: auto;
+    }
 }
 
-.th-edit{
+.th-edit {
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 126%;
@@ -27,29 +44,62 @@
     vertical-align: middle;
     color: var(brn-color-black);
     text-align: left;
-
     padding: 4%;
     border-right: 2px solid #E8E8E8;
     width: 344px;
+
+    @media screen and (max-width: 800px) {
+        font-size: 1rem;
+        padding: 3%;
+        width: 30%;
+    }
+    
+    @media screen and (max-width: 500px) {
+        font-size: 0.8rem; 
+        padding: 2%;
+        width: 120px;
+        min-width: 120px;
+    }
 }
 
-.th-edit-title{
+.th-edit-title {
     font-weight: 700;
     font-size: 1.75rem;
     text-align: left;
     padding: 4%;
     border-right: 2px solid #E8E8E8;
+   
+    @media screen and (max-width: 800px) {
+        font-size: 1.3rem; 
+        padding: 3%;
+    }
+   
+    @media screen and (max-width: 480px) {
+        font-size: 1rem; 
+        padding: 2%;
+    }
 }
 
-.table-btn{
+.table-btn {
     width: 80%;
     height: 64px;
     background-color: var(--background-color-shop);
     border: none;
-
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 100%;
     letter-spacing: 0%;
     color: var(--btn-color-white);
+
+    @media screen and (max-width: 800px) {
+        width: 90%;
+        height: 56px; 
+        font-size: 1.1rem;
+    }
+
+    @media screen and (max-width: 480px) {
+        width: 100%; 
+        height: 48px;
+        font-size: 0.7rem; 
+    }
 }
