--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -53,6 +53,7 @@
 
 @use 'layout/blog/blog-main-component';
 @use 'layout/blog/main-blog';
+@use 'layout/blog/_el-blog-main-categories';
 
 
 // ==== 4. Components ====
